[gd_scene load_steps=9 format=3 uid="uid://br7td7lkiiqj1"]

[ext_resource type="FontFile" uid="uid://cd2d0made820k" path="res://Resources/Fonts/Default.ttf" id="2_iafqn"]
[ext_resource type="Texture2D" uid="uid://bsatv12byvsbb" path="res://Resources/Images/Icicle_selected.png" id="2_v5u58"]
[ext_resource type="Script" path="res://Scripts/SoundSlider.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://8v2til5u0c6l" path="res://Resources/Images/Icicle.png" id="4"]
[ext_resource type="Texture2D" uid="uid://d4chefgnih5n1" path="res://Resources/Images/mute.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bn62nnmrantuh" path="res://Resources/Images/mute2.png" id="6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n01j3"]
bg_color = Color(0.0119074, 0.838494, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n21h1"]
bg_color = Color(0.566319, 0.901855, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="master" type="HSlider"]
offset_right = 671.0
offset_bottom = 30.0
focus_mode = 0
theme_override_icons/grabber = ExtResource("4")
theme_override_icons/grabber_highlight = ExtResource("2_v5u58")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_n01j3")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_n21h1")
min_value = -50.0
max_value = 0.0
step = 0.1
value = -2.9
script = ExtResource("3")

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_left = -208.0
offset_top = -16.0
offset_right = -40.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_iafqn")
theme_override_font_sizes/font_size = 20
text = "Master"
horizontal_alignment = 2
vertical_alignment = 1

[node name="mute" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -40.0
offset_right = -8.0
offset_bottom = 32.0
toggle_mode = true
texture_normal = ExtResource("5")
texture_pressed = ExtResource("6")
texture_disabled = ExtResource("5")
stretch_mode = 3

[connection signal="value_changed" from="." to="." method="_on_master_value_changed"]
[connection signal="button_up" from="mute" to="." method="_on_mute_button_up"]
[connection signal="toggled" from="mute" to="." method="_on_TextureButton_toggled"]
